[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.1"
crossterm = "0.25.0"
num-format = "0.4.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "department"
path = "src/department.rs"

[[bin]]
name = "numbers"
path = "src/numbers.rs"

[[bin]]
name = "todo"
path = "src/todo.rs"

[[bin]]
name = "number_game"
path = "src/number_game.rs"